--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -225,6 +225,7 @@
     max-width: 900px;
     margin: -0.75em 0 0 0.5em;
     a.link {
+      cursor: pointer;
       display: inline-block;
       line-height: 1em;
       font-size: 0.75em;
