--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -354,12 +354,14 @@ li.focus a:hover {
 		padding: 0.5em 1em;
 		margin-left: 1em;
 		background-color: #40b208;
+    border-radius: 8px;
 		// border: 1px solid transparent;
 		color: #fff;
 		transition: all 0.2s ease;
 		&:hover {
-			background-color: rgba(64,178,8,0.4);
-			// border: 1px solid #fff;
+      transform: scale(0.9);
+			// background-color: rgba(64,178,8,0.4);
+			//border: 1px solid #fff;
 			color: #fff;
 		}
 	}
