wow... it works
meetings in desc order with number of dir, zoom, onetap clicks. only need to clean up the total count as it is including when onetap, zoom or dir is clicked.

--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -92,7 +92,7 @@
     .rowa-header,
     .rowa {
       display: flex;
-      align-items: center;
+      // align-items: center;
       width: 100%;
       max-width: 900px;
       .counta,
@@ -101,7 +101,7 @@
       .mtgnamea {
         display: flex;
         // justify-content: center;
-        align-items: center;
+        // align-items: center;
         padding: 0.25em 0.5em;
         word-break: break-word;
         width: 100%;
