--- a/components/sass/_analytics.scss
+++ b/components/sass/_analytics.scss
@@ -15,6 +15,14 @@
     padding: 0em 0em 1em;
   }
 }
+.mbh {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 900px;
+  font-size: 1.5em;
+  margin-bottom: -0.75em;
+}
 .ia-ip-list {
   display: flex;
   flex-direction: row;
@@ -139,7 +147,7 @@
         padding: 0.25em 0.5em;
       }
       .counta {
-        justify-content: flex-start;
+        // justify-content: flex-start;
       }
     }
     .rowa:nth-child(even) {
