Wednesday before hike

--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -336,6 +336,12 @@ input.day-values {
 .glance-mtg-type i.fa-map-marker-alt {
   color: #ea4335;
 }
+.daily-glance .glance-group-title {
+  p.adgrp {
+    color: #5676be;
+  }
+  // align-items: center;
+}
 
 p.logout,
 .manage-simple>p.logout>a {
