--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -162,6 +162,7 @@ h1.usr-role-mtg {
 	text-align: left;
 	font-size: 1.25em;
 	margin-top: 0.5em;
+  margin: 0.5em 0 1em;
 	padding: 0em 0.25em;
 	border-bottom: 1px solid #fff;
 }
