--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -119,7 +119,10 @@ p.no-mtgs {
 .mtgdays {
   width: 100%;
   max-width: 900px;
-  margin: 0 1em -1em;
+  padding: 8px 20px 8px 18px;
+  margin-bottom: -1em;
+  background-color: rgba(0,0,0,0.5);
+  cursor: default;
 }
 .daily-glance-wrap {
 	width: 100%;
