--- a/components/sass/_host-management.scss
+++ b/components/sass/_host-management.scss
@@ -4,7 +4,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   line-height: 1.5em;
