--- a/components/sass/_Theme-light.scss
+++ b/components/sass/_Theme-light.scss
@@ -791,5 +791,6 @@ h2#role-h2 {
 }
 
 .mtgdays {
-  background-color: rgba(116,180,225,0.5)
+  background-color: rgba(116,180,225,0.5);
+  border-top: 1px solid rgba(116,180,225,0.8);
 }
