before Sunday hike commit

--- a/components/sass/_msg-one.scss
+++ b/components/sass/_msg-one.scss
@@ -1,5 +1,6 @@
 a#toggle-total-interactions
 a#toggle-unique-ip,
+a#toggle-days-opened,
 a#toggle-individual-interactions,
 a#toggle-clean-up-ips,
 a#toggle-lat-long-msg,
@@ -58,6 +59,7 @@ a#gmaps {
 #mb-notes,
 #total-interactions,
 #unique-ip,
+#days-opened,
 #individual-interactions,
 #clean-up-ips,
 #theme-options {
@@ -228,6 +230,7 @@ a.youtube {
   #mb-notes,
   #total-interactions,
   #unique-ip,
+  #days-opened,
   #individual-interactions,
   #clean-up-ips,
   #theme-options {
@@ -270,6 +273,7 @@ a.youtube {
   #mb-notes,
   #total-interactions,
   #unique-ip,
+  #days-opened,
   #individual-interactions,
   #clean-up-ips,
   #theme-options {
