--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -242,6 +242,39 @@
 		background-color: rgba(255,215,0,0.6);
 		color: #fff;
 		cursor: default;
+    &.err-on {
+      background-color: #ff0000;
+      cursor: pointer;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      &:hover {
+        background-color: #ab0000;
+      }
+    }
+    &.err-off {
+      cursor: default;
+      background-color: transparent;
+    }
+
+
+    .del-err {
+      // background-color: #ff0000;
+      // cursor: pointer;
+      // transition: all 0.2s ease;
+      &:hover {
+        // background-color: #ab0000;
+      }
+      i {
+        margin-right: 0.5em;
+      }
+    }
+
+
+
+
+
+
+
 	}
 	.visitor-role,
 	.member-role {
