--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -117,13 +117,13 @@ p.no-mtgs {
 	padding: 2em 0em 1em;
 }
 .mtgdays {
-  width: 100%;
+  // width: 100%;
   max-width: 900px;
-  padding: 8px 20px 8px 18px;
-  margin-bottom: -1em;
-  margin: 5px 0 -1em;
-  border-top: 1px solid rgba(255,255,255,0.2);
-  background-color: rgba(0,0,0,0.5);
+  // padding: 8px 20px 8px 18px;
+  // margin-bottom: -1em;
+  // margin: 5px 0 -1em;
+  // border-top: 1px solid rgba(255,255,255,0.2);
+  // background-color: rgba(0,0,0,0.5);
   cursor: default;
 }
 .daily-glance-wrap {
