--- a/components/sass/_navigation.scss
+++ b/components/sass/_navigation.scss
@@ -246,6 +246,7 @@
       background-color: #ff0000;
       cursor: pointer;
       cursor: pointer;
+      margin-bottom: 3px;
       transition: all 0.2s ease;
       &:hover {
         background-color: #ab0000;
@@ -253,6 +254,7 @@
     }
     &.err-off {
       cursor: default;
+      margin-bottom: 3px;
       background-color: transparent;
     }
 
@@ -266,6 +268,7 @@
       }
       i {
         margin-right: 0.5em;
+        font-size: 1.2em;
       }
     }
 
