--- a/components/sass/_user-management.scss
+++ b/components/sass/_user-management.scss
@@ -444,7 +444,7 @@ li.focus a:hover {
 		justify-content: space-between;
 		flex-wrap: wrap;
 		&:hover {
-			background-color: inherit;
+			// background-color: inherit;
 		}
 		.glance-mtg-time {
 			order: 1;
