--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -146,9 +146,21 @@ p.no-mtgs {
 	border-left: 1px solid transparent;
 	color: inherit;
 	line-height: 1.5em;
+  background-color: transparent;
+  // background-color: rgba(0,0,0,0.2);
+  transition: all 0.2s ease;
 	&:hover {
 		background-color: rgba(0,0,0,0.2);
 	}
+  &.md {
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    &:hover {
+      border-radius: 0px;
+      background-color: rgba(0,0,0,0.4);
+    }
+  }
 	.glance-mtg {
 		display: flex;
 		flex: 1;
@@ -198,6 +210,15 @@ p.no-mtgs {
 	background-color: rgba(0,0,0,0.3);
 	// border-bottom-right-radius: 10px;
 	// border-bottom-left-radius: 10px;
+  &.user-mng {
+    padding: 0px;
+    &:hover {
+      // background-color: inherit;
+    }
+    &.active {
+      background-color: inherit;
+    }
+  }
 	&.draft-bkg {
 		//background: url('_images/draft-bkg.png') no-repeat center center;
 		}
@@ -325,7 +346,11 @@ p.no-mtgs {
 		padding: 50px;
 	}
 }
-
+.manage-glance-wrap.um.active .manage-glance.user-glance {
+  background-color: rgba(0,0,0,0.3);
+  // background-image: none;
+  // background: none;
+}
 
 .collapse-day {
 	cursor: pointer;
