--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -803,11 +803,12 @@ a.map-dir {
 	background-color: #fff;
 	background-color: #5cd359;
 	padding: 1em;
-	width: 90%;
+	width: 96%;
+  max-width: 250px;
 	margin: 0.5em auto;
 	text-decoration: none;
 	text-align: center;
-	// border-radius: 3px;
+	border-radius: 3px;
 	transition: all 0.2s ease;
 	&:hover {
 		background-color: #757575;
@@ -932,6 +933,7 @@ a.new-mtg-btn {
 	border: 1px solid #fff;
 	text-decoration: none;
   // box-shadow: 0px 6px 4px -3px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
   box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.3);
 	transition: all 0.15s ease;
 	&:hover {
