removed Sunday Speaker option
and additional CSS clean up

--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -282,7 +282,7 @@ p.no-mtgs {
 			width: 50%;
 			padding: 1em;
 			p.add-info {
-				text-decoration: underline;
+				// text-decoration: underline;
 				font-weight: bold;
 				margin-top: 0.5em;
 				margin-bottom: 0.5em;
